mentee-shop-ingress/ingress/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: mentee-shop
  annotations:
    # Basic Auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: admin-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"

    # Whitelist IP
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
    # Rate Limit
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - admin.mentee-power.ru
      secretName: admin-tls-secret
  rules:
    - host: admin.mentee-power.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8083
